# harness-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  TIMELINE_OPS.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
config/: office_map.json
harness_analytics/: __init__.py  __main__.py  _debug_agent_log.py  analytics.py  app_settings.py  auth.py  bulk_recompute.py  classifier.py  ctnf_outcome.py  db.py  excel_builder.py  extension_analytics.py  extension_metrics.py  ingest.py  models.py  portal.py  portfolio_aggregates.py  portfolio_api.py  reports.py  schema_migrations.py  server.py  timeline_api.py  xml_parser.py
harness_analytics/jobs/: __init__.py  queue.py  tasks.py  worker.py
harness_analytics/static/: actions_inbox.css  actions_inbox.js  portfolio.css  portfolio.js  rules_admin.css  rules_admin.js  timeline.css  timeline.js
harness_analytics/templates/: actions_inbox.html  base.html  index.html  login.html  matter.html  portfolio.html  rules_admin.html  settings.html
harness_analytics/timeline/: __init__.py  calculator.py  fees.py  holidays.py  ics.py  materializer.py  rules_repo.py
harness_analytics/timeline/data/: docket_close_conditions.json  federal-holidays.json  fees.json  ifw-rules.json  supersession_seed.json
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_users_and_tenant.py  0003_ifw_rules.py  0004_computed_deadlines.py  0005_verified_deadlines.py  0006_user_manager.py  0007_saved_views.py  0008_ifw_rule_versions.py  0009_docket_cross_off.py
scripts/: add_extension_columns.sql  add_ifw_a_ne_count_column.sql  add_schema_continuity_ctrs.sql  dump_ifw.py  import_docket_conditions.py  inspect_ifw_codes.py  run_railway_analytics.py  run_railway_ingest.py  run_railway_report.py  verify_auto_close.py
tests/: test_analytics.py  test_auth.py  test_biblio_endpoint.py  test_classifier.py  test_ctnf_outcome.py  test_extension_analytics.py  test_extension_metrics.py  test_parser.py  test_portal.py  test_portfolio_aggregates.py  test_portfolio_api.py  test_server_scheduler.py  test_settings_portal.py  test_timeline_api.py
tests/fixtures/: sample_17552591.xml
tests/timeline/: test_auto_close.py  test_date_math.py  test_ics.py  test_kinds.py  test_rules_seed.py  test_seed_close_conditions.py  test_supersession.py
