[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-analytics"
version = "0.1.0"
description = "Harness IP prosecution analytics from Patent Center Biblio XML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "lxml",
  "pandas",
  "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest"]
web = ["fastapi", "uvicorn[standard]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
