[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-analytics"
version = "0.1.0"
description = "Harness IP prosecution analytics from Patent Center Biblio XML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "lxml",
  "pandas",
  "openpyxl",
  "python-dateutil>=2.8",
  "alembic>=1.13",
  "passlib[argon2]>=1.7.4",
]

[project.optional-dependencies]
dev = ["pytest", "httpx>=0.27"]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "jinja2",
  "itsdangerous>=2.0",
  "python-multipart>=0.0.9",
  "pyjwt>=2.8",
]
worker = [
  "arq>=0.26",
  "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_analytics*"]

[tool.setuptools.package-data]
harness_analytics = [
  "templates/*.html",
  "static/*",
  "timeline/data/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
